--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>August16th</title>
+		<title>August 22nd</title>
 <style>
 body {
 	background-color: none;
@@ -3999,21 +3999,158 @@ body {
 			dayCompleted: ``,
 		},
 		{
-			question: ``,
-			answer: ``,
+			question: `How to change decimal to binary`,
+			answer: `multiply decimal by 2, take the returning number's first value before the "." Its  or 1. then repeat until 0`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
 			dayCompleted: ``,
 		},
 		{
-			question: ``,
-			answer: ``,
+			question: `浮動小数点数`,
+			answer: `floating point`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
 			dayCompleted: ``,
 		},
+		{
+			question: `情報落ち`,
+			answer: `浮動小数点数の加算において、一方の数値下位の桁が結果に反映されないこと。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `桁落ち`,
+			answer: `値がほぼ等しい浮動小数点数動詞を減算するとき、有効桁数が大幅に減ってしまう。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `オーバーフロー`,
+			answer: `演算結果が、扱える数値の最大値を超えることによって生じるエラーのこと`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `丸め誤差`,
+			answer: `浮動小数点数の演算結果に最小桁よりも小さい部分の四捨て五入、切上げまたは、切捨て、を行うことによって生じる誤差のこと`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Hex to Dec`,
+			answer: `Take the decimal .248 and put each number over its factor of 16.  (2/16) + (4/256) + (8/4096) then find a common denominator`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `強化学習`,
+			answer: `AIが行った個々の行動に対して、良し悪しを得点として与えることによって、得点が最も多く得られるような方策を学習する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `教師あり学習`,
+			answer: `AIに正解のデータを提示したり、データが誤りであるを指摘して、未知のデータに対して正誤を得ることを助けます`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `エキスパートシステム`,
+			answer: `”AならばBである”という形で、ある分野に特化した知識を論理式で表現したルールを人間があらかじめ設定し、その推論の結果として解を求める。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `ディープラーニング`,
+			answer: `脳神経回路を模倣したニューラルネットワークを用いて、認識などの人間と同じくような知能を実現するもの`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `＿＿＿＿であれば＿＿＋＿＿＿＿の間に全体のやく＿＿％が含まれる`,
+			answer: `正規分布であれば平均＋標準偏差の間に全体のやく６８％が含まれる`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `再配置可能プログラム`,
+			answer: `主記憶上のどこのアドレスに配置しても、実行する`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `再入可能`,
+			answer: `Re-entrant　プログラム: 複数のタスクからの呼び出しに対し、並行して実行しても、それぞれに正しい結果を返します。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `feedback制御`,
+			answer: `あらかじめ決められた順番ではなく、起きた事象に応じた処理を行う。`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `復帰`,
+			answer: `処理に失敗したときに、その処理を呼び出す直前の状態に戻すこと。Recovery!`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `binary search`,
+			answer: `(half-interval search / logarithmic search) : finds a value in a sorted array. 二分検索logn またlog2n ( thats a small 2)`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `bubble sort`,
+			answer: `swaps adjacent elements if they are in the wrong order`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+		{
+			question: `Quick sort`,
+			answer: `picks an element as a pivot and partitions the given array`,
+			pictureQ: `images/0.png`,
+			pictureA: `images/0.png`,
+			level: 0,
+			dayCompleted: ``,
+		},
+
 
 	];
 	
@@ -4043,11 +4180,55 @@ body {
 				dataPrev.splice(index, 1);
 
 			};
+		});
+		dataPrev.forEach(e => {
+			let depreciation = ((Math.floor(date.getTime()/1000)) - (Math.floor(e.dayCompleted/1000)));
+			if(e.dayCompleted === `` || e.dayCompleted === 0) {
+					depreciation = 0;
+					e.dayCompleted = date.getTime();
+				};
+			let depreciateBy = 0;
+			if(depreciation > 90000) {
+				depreciateBy++;
+			};
+			if(depreciation > 180000) {
+				depreciateBy++;
+			};
+			if(depreciation > 270000) {
+				depreciateBy++;
+			};
+			if(depreciation > 360000) {
+				depreciateBy++;
+			};
+			if(depreciation > 450000) {
+				depreciateBy++;
+			};
+			if(depreciation > 540000) {
+				depreciateBy++;
+			};
+			if(depreciation > 630000) {
+				depreciateBy++;
+			};
+			if(depreciation > 720000) {
+				depreciateBy++;
+			};
+			if(depreciation > 810000) {
+				depreciateBy++;
+			};
+			if(depreciation > 900000) {
+				depreciateBy++;
+			};
 			
+			if((e.level - depreciateBy) < 0){
+				e.level = 0;
+				e.dayCompleted = date.getTime();
+			} else {
+				e.level = e.level - depreciateBy;
+				e.dayCompleted = date.getTime();
+			};
 		});
 
-
-
+		
 		data = dataPrev;
 		localStorage.setItem(`data`, JSON.stringify(data));
 		localStorage.setItem(`numOfReviews`, JSON.stringify(numOfReviews));
@@ -4055,7 +4236,6 @@ body {
 		localStorage.setItem(`data`, JSON.stringify(data));
 		localStorage.setItem(`numOfReviews`, JSON.stringify(numOfReviews));
 	};
-
 
 
 	const dates = [
@@ -4167,7 +4347,7 @@ body {
 			
 		});
 		data.forEach( (e, index) => {
-			if(e.level === queenOfTheHill){
+			if(e.level === queenOfTheHill || e.level === (queenOfTheHill+1)){
 				lowestData.push(index);
 			};
 		});
@@ -4236,6 +4416,7 @@ body {
 						data[currentNum].level = (data[currentNum].level + 2) > 10 ? 10 : data[currentNum].level + 2;
 						break;
 				};
+				data[currentNum].dayCompleted = date.getTime();
 				closeModal();
 				localStorage.setItem(`data`, JSON.stringify(data));
 				numOfReviews++;
