--- a/index.html
+++ b/index.html
@@ -4799,7 +4799,7 @@ body {
 			dayCompleted: ``,
 		},
 		{
-			question: 線形解読法`,
+			question: `線形解読法`,
 			answer: `暗号化関数の統計的な偏りを線形関数によって近似して解読する`,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
@@ -4887,264 +4887,8 @@ body {
 			dayCompleted: ``,
 		},
 		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
 			question: `真正性`,
 			answer: `Authenticity: エンティティが、それが主張するとおりのものであるという特性`,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
-			pictureQ: `images/0.png`,
-			pictureA: `images/0.png`,
-			level: 0,
-			dayCompleted: ``,
-		},
-		{
-			question: ``,
-			answer: ``,
 			pictureQ: `images/0.png`,
 			pictureA: `images/0.png`,
 			level: 0,
